--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "guid": "0.0.12",
     "http": "0.0.0",
-    "mongoose": "^5.0.13"
+    "jsonwebtoken": "^8.2.1",
+    "md5": "^2.2.1",
+    "mongoose": "^5.0.13",
+    "sendgrid": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
